syntax = "proto2";

package hercules.proto;

enum DataType {
    TYPE_INVALID = 0;
    TYPE_BOOL = 1;
    TYPE_UINT8 = 2;
    TYPE_UINT16 = 3;
    TYPE_UINT32 = 4;
    TYPE_UINT64 = 5;
    TYPE_INT8 = 6;
    TYPE_INT16 = 7;
    TYPE_INT32 = 8;
    TYPE_INT64 = 9;
    TYPE_FP16 = 10;
    TYPE_FP32 = 11;
    TYPE_FP64 = 12;
    TYPE_BYTES = 13;
    TYPE_BF16 = 14;
}

enum MemoryType {
    MEMORY_CPU = 0;
    MEMORY_CPU_BINDING = 1;
    MEMORY_GPU = 2;
}

enum ErrorCode {
    ERROR_SUCCESS = 0;
    ERROR_UNKNOWN = 1;
    ERROR_INTERNAL = 2;
    ERROR_NOT_FOUND = 3;
    ERROR_INVALID_ARG = 4;
    ERROR_UNAVAILABLE = 5;
    ERROR_UNSUPPORTED = 6;
    ERROR_ALREADY_EXISTS = 7;
}

